# tf2bd_mh_stuff

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  runtest.bat  runtest.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ccpp.yml
cmake/: CheckCoroutineSupport.cmake  CheckCoroutineSupport.cpp  CheckUnicodeSupport.cmake  CheckUnicodeSupport.cpp  GenericTargetOptions.cmake  config.cmake.in
cpp/: mh_stuff.natvis
cpp/data/: bit_float.hpp
cpp/include/mh/: compiler.hpp  format.hpp  future.hpp  source_location.hpp  utility.hpp  variant.hpp
cpp/include/mh/algorithm/: algorithm.hpp  algorithm_generic.hpp  multi_compare.hpp
cpp/include/mh/chrono/: chrono_helpers.hpp  chrono_helpers.inl
cpp/include/mh/concurrency/: async.hpp  dispatcher.hpp  dispatcher.inl  future.hpp  locked_value.hpp  main_thread.hpp  mutex_debug.hpp  thread_pool.hpp  thread_pool.inl  thread_sentinel.hpp  thread_sentinel.inl
cpp/include/mh/containers/: heap.hpp
cpp/include/mh/coroutine/: coroutine_common.hpp  coroutine_include.hpp  future.hpp  generator.hpp  task.hpp  thread.hpp  thread.inl  thread_task.hpp
cpp/include/mh/data/: bit_float.hpp  bits.hpp  lazy.hpp  optional_ref.hpp  variable_pusher.hpp
cpp/include/mh/error/: ensure.hpp  ensure.inl  error_code_exception.hpp  exception_details.hpp  exception_details.inl  expected.hpp  nested_exception.hpp  not_implemented_error.hpp  status.hpp
cpp/include/mh/io/: file.hpp  filesystem_helpers.hpp  filesystem_helpers.inl  getopt.hpp
cpp/include/mh/math/: angles.hpp  interpolation.hpp  random.hpp  random.inl  uint128.hpp
cpp/include/mh/memory/: buffer.hpp  buffer.inl  cached_variable.hpp  checked_ptr.hpp  memory_helpers.hpp  stack_info.hpp  stack_info.inl  unique_object.hpp
cpp/include/mh/raii/: scope_exit.hpp
cpp/include/mh/reflection/: enum.hpp  struct.hpp
cpp/include/mh/text/: case_insensitive_string.hpp  charconv_helper.hpp  codecvt.hpp  codecvt.inl  fmtstr.hpp  format.hpp  indenting_ostream.hpp  insertion_conversion.hpp  memstream.hpp  multi_char.hpp  string_insertion.hpp  stringops.hpp
cpp/include/mh/text/formatters/: error_code.hpp
cpp/include/mh/types/: assert_cast.hpp  disable_copy_move.hpp  enum_class_bit_ops.hpp
cpp/math/: interpolation.hpp
cpp/memory/: buffer.hpp  unique_object.hpp
cpp/src/: source_location.cpp
cpp/src/io/: file.cpp
cpp/src/text/: case_insensitive_string.cpp  codecvt.cpp  string_insertion.cpp
cpp/text/: charconv_helper.hpp  memstream.hpp  string_insertion.hpp
cpp/unique_object/: unique_object.hpp
test/: CMakeLists.txt  Makefile  Makefile2  algorithm_algorithm_test.cpp  catch2.cpp  coroutine_task_test.cpp  data_bit_float_test.cpp  data_bits_test.cpp  data_variable_pusher_test.cpp  io_getopt_test.cpp  math_interpolation_test.cpp  math_uint128_test.cpp  memory_buffer_test.cpp  test.cpp  test_compile_file_base.cpp  text_case_insensitive_string_test.cpp  text_charconv_helper_test.cpp  text_codecvt_test.cpp  text_memstream_test.cpp  text_string_insertion_test.cpp  text_stringops_test.cpp
test/catch2/: catch2.cpp
